--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,6 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: punchcard_production
+  username: posgres
+  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
